--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,13 +9,16 @@ readme = "README.md"
 license = "MIT OR Apache-2.0"
 
 [dependencies]
+cached = { version = "0.20.0", default-features = false }
 cargo_metadata = "0.9"
 docopt = "1"
 env_logger = "0.8"
 lol_html = "0.2"
 log = "0.4"
 num_cpus = "1.8"
+once_cell = "1.5.1"
 rayon = "1.0"
+regex = { version = "1", default-features = false, features = ["std", "perf"] }
 ureq = { version = "1.5.2", features = ["tls"], default-features = false }
 serde = "1.0"
 serde_derive = "1.0"
@@ -26,3 +29,4 @@ serde_json = "1.0.34"
 [dev-dependencies]
 assert_cmd = "1.0"
 predicates = "1.0.0"
+mockito = "0.28.0"
